# hacksussex

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
backend/: data_scraping.txt  vector_database.py  webscrape.py
backend/backend/vectorised/: chroma.sqlite3
backend/faqs_data/: test_data.txt
backend/html/: Multi Car Insurance.html
backendvectorised/: chroma.sqlite3
database/: webscrape.py
database/faqs_data/: test_data.txt
database/html/: Car Insurance.html  Home Insurance.html  Van Insurance.html
frontend/: Test.py
streamlit/: Test.py
