[tool.poetry]
name = "hachsussex-lab"
version = "0.1.0"
description = ""
authors = ["acodercat <mran2@asu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
chromadb = "^0.4.22"
streamlit = "^1.31.1"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
python-dotenv = "^1.0.1"
unstructured = "^0.12.4"
llama-index = "^0.10.5"
langchain-community = "^0.0.20"
llama-index-vector-stores-chroma = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
